--- a/_variables.scss
+++ b/_variables.scss
@@ -2,7 +2,6 @@
 $font-size-root: 16px;
 $line-height-base: 1.65;
 $headings-font-weight: 600;
-$monofont: "Fira Code";
 
 // Shared colors
 $primary: #3182ce;
@@ -14,5 +13,4 @@ $danger: #e53e3e;
 
 // Spacing and layout
 $border-radius: 6px;
-$content-max-width: 70rem;
 $spacer: 1rem;
